**Releases:

v7.x-2.0
---------
- Full featured module met nieuw overzicht, actieplan, financieel plan, jaaractieplan
- Nieuwe mogelijkheden om actieplannen te beheren
- Integratie van budgetbeheer
- Full report om af te drukken als beleidsplan dossier

v7.x-1.1
---------
- Module release met chart

v7.x-1.0
---------
- eerste release als Feauture


**Unreleased:
(check also forum, blog and projectstatus - issues and tickets)