@@ -2,8 +2,20 @@ name = Beleidsplannen
 description = Maak een beleidsplan op basis van een vaste structuur en bouw een boomstructuur op om je beleid in kaart te brengen.
 core = 7.x
 package = argus - a Quality control extension
-version = 7.x-2.0
+version = 7.x-2.1
 project = argus_beleidsplannen
+files[] = css/argus_beleidsplannen.css
+files[] = js/argus_beleidsplannen_actieplan.js
+files[] = js/argus_beleidsplannen_structure.js
+files[] = js/argus_beleidsplannen.js
+files[] = templates/argus_beleidsplannen--edit-model-action.tpl.php
+files[] = templates/argus_beleidsplannen--jaaractieplan.tpl.php
+files[] = templates/argus_beleidsplannen--schoolontwikkelingsplan.tpl.php
+files[] = templates/argus_beleidsplannen--structure.tpl.php
+files[] = templates/node--beleidsplan-actieplan.tpl.php
+files[] = templates/node--beleidsplan-administration.tpl.php
+files[] = templates/node--beleidsplan-overview.tpl.php
+files[] = templates/node--beleidsplan.tpl.php
 dependencies[] = argus_acties
 dependencies[] = argus_ikz
 dependencies[] = argus_projecten
