@@ -1,11 +1,15 @@
 **Releases:
 
+v7.x-2.1
+---------
+- Twee nieuwe features: schoolontwikkelingsplan, jaaractieplan
+
 v7.x-2.0
 ---------
-- Full featured module met nieuw overzicht, actieplan, financieel plan, jaaractieplan
+- Full featured module met nieuw overzicht, actieplan, financieel plan, deel-jaaractieplan
 - Nieuwe mogelijkheden om actieplannen te beheren
 - Integratie van budgetbeheer
-- Full report om af te drukken als beleidsplan dossier
+- Full report om af te drukken als beleidsplandossier
 
 v7.x-1.1
 ---------
